--- a/resources/skins.citizen.styles/tokens-pccw.less
+++ b/resources/skins.citizen.styles/tokens-pccw.less
@@ -30,7 +30,8 @@
 	--color-surface-3: ~'oklch( var( --color-surface-3-oklch__l ) var( --color-surface-3-oklch__c ) var( --color-surface-0-oklch__h ) )';
 	--color-surface-4: ~'oklch( var( --color-surface-4-oklch__l ) var( --color-surface-4-oklch__c ) var( --color-surface-0-oklch__h ) )';
 
-
+oklch(0.9905 0.0026 106.45)
+	
 	/* ---- Spacing scale (relative to --space-md) ---- */
 	--space-xxxs: calc(var(--space-unit) * 0.125);
 	--space-xxs:  calc(var(--space-unit) * 0.250);
