--- a/resources/skins.citizen.styles/tokens-pccw.less
+++ b/resources/skins.citizen.styles/tokens-pccw.less
@@ -30,7 +30,26 @@
 	--color-surface-3: ~'oklch( var( --color-surface-3-oklch__l ) var( --color-surface-3-oklch__c ) var( --color-surface-0-oklch__h ) )';
 	--color-surface-4: ~'oklch( var( --color-surface-4-oklch__l ) var( --color-surface-4-oklch__c ) var( --color-surface-0-oklch__h ) )';
 
-oklch(0.9905 0.0026 106.45)
+
+	/* Text color */
+	--color-progressive-oklch__l: 0.9905;
+	--color-progressive-oklch__c: 0;
+	--color-progressive-oklch__h: 106.45;
+	
+	--color-emphasized-oklch__l: 5%;
+	--color-emphasized-oklch__c: 0;
+	
+	--color-base-oklch__l: 20%;
+	--color-base-oklch__c: 0;
+	
+	--color-subtle-oklch__l: 35%;
+	--color-subtle-oklch__c: 0;
+	
+	--color-placeholder-oklch__l: 40%;
+	--color-placeholder-oklch__c: 0;
+	
+	--color-disabled-oklch__l: 60%;
+	--color-disabled-oklch__c: 0;
 	
 	/* ---- Spacing scale (relative to --space-md) ---- */
 	--space-xxxs: calc(var(--space-unit) * 0.125);
