--- a/resources/skins.citizen.styles/skinning/content.media-screen.less
+++ b/resources/skins.citizen.styles/skinning/content.media-screen.less
@@ -20,11 +20,20 @@ figure[ typeof~='mw:File/Frame' ] {
 			max-width: 100%;
 			height: auto;
 			contain: strict;
-			object-fit: contain;
+			transition: var( --transition-hover );
+			transition-property: transform;
 
 			// Prevent constraining image width in tables
 			table & {
 				max-width: none;
+			}
+		}
+
+		// Add affordance to replace magnify icon
+		&:hover:not( .lazy ):not( .new ) {
+			img,
+			source {
+				transform: var( --transform-image-hover );
 			}
 		}
 	}
